got map to appear on screen

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -20,6 +20,7 @@ Container
 
 .container {
   padding: 20px;
+  text-align: center;
 }
 
 /* --------------------------------------------------------------------------------
@@ -89,6 +90,7 @@ Alert
   border-radius: 3px;
   color: #e01616;
   font-size: 0.8rem;
+  height: 50vh;
 }
 
 /* --------------------------------------------------------------------------------
