map is recentering on user location

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -90,7 +90,7 @@ Alert
   border-radius: 3px;
   color: #e01616;
   font-size: 0.8rem;
-  height: 50vh;
+  height: 90vh
 }
 
 /* --------------------------------------------------------------------------------
